@@ -1,6 +1,7 @@
 [1.8.0-SNAPSHOT]
 - Update to LibGDX 1.9.8, RoboVM 2.3.3
-- Added support for pixel coordinate based UI layouts
+- Added support for both flex and pixel coordinate UI layouts
+- Improved scrolling when dragging scroll thumb in ScrollBox
 
 [1.7.14]
 - (#76) Added support for Tiled object shapes
